--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+beautifulsoup4==4.12.3
 grobid-client-python==0.0.8
 ipykernel==6.29.5
+lxml==5.3.0
 pdfminer.six==20240706
 PyMuPDF==1.24.9
 pypdf==4.3.1
